2000-03-26  Alexander Larsson  <alla@lysator.liu.se>

	* dia.desktop:
	* po/pt.po:
	Updated pt translation from Pedro Morais <pmmm@rnl.ist.utl.pt>

2000-03-25  Alexander Larsson  <alla@lysator.liu.se>

	* app/dia.gnorba (location_info):
	Changed to correct executable name.

2000-03-25  Alexander Larsson  <alla@lysator.liu.se>

 	* app/app_procs.c:
	Don't do any argument parsing or initialization
	if argv==NULL.

 	* app/dia_embedd.c:
	Call init_server_factroy before app_init.
	Call app_init with argv==NULL
	Now we don't get any critical error on startup.

	* configure.in:
	Add Electric and Pneumatic to makefile list.
	
2000-03-24  Cyrille Chepelov <chepelov@calixo.net>

	* shapes/Electric/*:
	* sheets/Electric.sheet:
	Add some Electric circuit shapes.

	* shapes/Pneumatic/*:
	* sheets/Pneumatic.sheet:
	Add some Pneumatic & Hydraulic circuit shapes
	(both sheets are still incomplete, though feature enough 
	things for basic circuits).

	* shapes/Contact/l_*.(xpm|shape):
	* sheets/Contact.sheet
	* shapes/Contact/Makefile.am
	made the older electric circuit shapes in Contact obsolete (disabled
	them in the sheet, made that sheet Ladder only). Fixed the makefile
	for forgotten items.
	
2000-03-24  Alexander Larsson  <alla@lysator.liu.se>

        * app/Makefile.am:
	Add support for Dia bonobo component.
	Currently a bit raw, so it's commented out.
	
        * app/dia_embedd.c:
	* app/dia.gnorba:
	New files for embedding dia.
	The menu disabling hack is a bit gross. Esp. for GNOME.

	* app/app_procs.h:
	Add new function app_is_embedded();

	* app/diagram.c:
	Don't destroy diagram when last display is destroyed if embedded.
	
	* app/display.c:
	Change initialization of display so it works with embedding.

	* app/display.h:
	Clarify comment about display destruction.

	* app/interface.[ch]:
	Added top_level_window argument to create_display_shell.
	Don't open a top-level window if embedding.
	Don't quit app if trying to close toolbox window when embedding.