@@ -1,5 +1,13 @@
 2000-03-26  Alexander Larsson  <alla@lysator.liu.se>
 
+	* app/render_eps.c:
+	* app/render_svg.c:
+	Don't dereference NULL pointer if the renderer
+	couldn't open the file. Fix by Lars Clausen.
+	Bug reported by Martin Chisholm <b1mt@unb.ca>
+	
+2000-03-26  Alexander Larsson  <alla@lysator.liu.se>
+
 	* dia.desktop:
 	* po/pt.po:
 	Updated pt translation from Pedro Morais <pmmm@rnl.ist.utl.pt>
